--- a/app/src/main/res/layout/title.xml
+++ b/app/src/main/res/layout/title.xml
@@ -22,5 +22,14 @@ android:layout_height="?attr/actionBarSize">
     android:textColor="#fff"
     android:textSize="16sp"/>
 
+    <Button
+        android:id="@+id/nav_button"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_marginLeft="10dp"
+        android:layout_alignParentLeft="true"
+        android:layout_centerVertical="true"
+        android:background="@drawable/ic_home"/>
+
 
 </RelativeLayout>
